Modernize empty list creation in MixedAuthenticatorTest
Agent-Logs-Url: https://github.com/Waffle/waffle/sessions/55976625-31a0-46ed-bee0-d9ba60c784f6

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>